# trawl

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: index.md
examples/: basic_usage.py
scripts/: setup-dev.sh
src/: main.py  tui_app.py
src/core/: config.py
src/models/: chat.py  response.py
src/schemas/: chat.py  documents.py
src/services/: chat.py  embeddings.py  invoke_chat.py  process_url.py  search.py
src/utils/: batch_insert_embeddings.py  config_manager.py  fetch_page.py  generate_response.py  insert_chat.py  insert_document.py  insert_response.py  rerank.py  retrieve.py  spawn_agent.py
tests/: conftest.py  test_basic.py
trawl/: __init__.py  cli.py  main.py  tui_app.py
trawl/core/: config.py
trawl/db/: database.py
trawl/models/: __init__.py  documents.py  response.py
trawl/schemas/: response.py
trawl/services/: chat.py  embeddings.py  invoke_chat.py  process_url.py
trawl/utils/: chunk_text.py  config_manager.py  event.py  extract_text.py  fetch_page.py  insert_document.py  insert_response.py
