[project]
name = "searchx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.48",
    "trafilatura>=2.0.0",
]
