[project]
name = "searchx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "certifi>=2026.2.25",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.48",
    "trafilatura>=2.0.0",
    "truststore>=0.10.4",
]
